test/echo-prober-cilium-l7/echo/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: echo-cilium

resources:
  - ./ns.yaml
  - ./deploy.yaml
  - ./sa.yaml
  - ./svc.yaml
  - ./cnp.yaml

commonAnnotations:
  xxx: sad

replicas:
  - name: echo
    count: 1

patchesStrategicMerge:
  - ./deploy.env.patch.yaml
  - ./deploy.res.patch.yaml

# secretGenerator:
#   - name: echo-echo-com
#     namespace: echo
#     files:
#     - tls.key=echo.echo.com-key.pem
#     - tls.crt=echo.echo.com.pem
#     type: "kubernetes.io/tls"
