test/echo-prober-cilium-l7/echo/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
    service: echo
spec:
  ports:
  - name: http
    port: 63636
    targetPort: http
  - name: https
    port: 63443
    targetPort: https
  - name: tcp
    port: 61234
    targetPort: tcp
  selector:
    app: echo
